fix: 채팅 메시지 조회 시 최신 메시지가 누락되는 버그 수정
ORDER BY ASC → DESC로 변경하여 최신 N개를 조회한 뒤 시간순 정렬